After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787462 - Missing gtk_widget_show call
Missing gtk_widget_show call
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: nm-applet
git master
Other All
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks: nm-review
 
 
Reported: 2017-09-09 02:28 UTC by Viktor Odintsev
Modified: 2017-09-13 08:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add missing gtk_widget_show calls for menu items (1.48 KB, patch)
2017-09-09 02:28 UTC, Viktor Odintsev
none Details | Review

Description Viktor Odintsev 2017-09-09 02:28:37 UTC
Created attachment 359425 [details] [review]
Add missing gtk_widget_show calls for menu items

Some menu items are added to menu without gtk_widget_show call. This causes a problem in --indicator mode: I can't see these menu items. The "mobile broadband" category is most vulnerable to this issue since I can't connect to mobile broadband and see its status.

For some reason with classic systray everything works well without gtk_widget_show call. But indicator is definitely affected.

I'm attaching the patch which fixes this problem.
Comment 1 Thomas Haller 2017-09-12 11:17:00 UTC
lgtm