Add missing gtk_widget_show calls for menu items

https://bugzilla.gnome.org/show_bug.cgi?id=787462